--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "module-13-challenge-orm",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "back-end for e commerce site",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,8 +14,8 @@
     "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "chris smith",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.3"
   },
